feat: add countdown

--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "count-down-react": "^1.0.12",
+    "dynamic-countdown": "^1.4.2",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.3.2",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-helmet": "^6.1.0",
